# UPSeller-DashBoard-Monitor-ESP32

./: .gitignore  README.md
3D Parts/: case.stl  cover.stl
BackEnd/: Python Code For Search.py  README.md
Firmware/UPSeller DashBoard Monitor ESP32 ProjectOl/: platformio.ini
Firmware/UPSeller DashBoard Monitor ESP32 ProjectOl/src/: lv_conf.h  main.cpp
Firmware/UPSeller DashBoard Monitor ESP32 ProjectOl/src/ui/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Compras.c  ui_Compras.h  ui_Estoque.c  ui_Estoque.h  ui_Lucro.c  ui_Lucro.h  ui_MercadoLivre.c  ui_MercadoLivre.h  ui_ParaEnvia.c  ui_ParaEnvia.h  ui_Screen1.c  ui_Screen1.h  ui_ScreenSleepMode.c  ui_ScreenSleepMode.h  ui_Shopee.c  ui_Shopee.h  ui_TelaNotificacoes.c  ui_TelaNotificacoes.h  ui_TelaParaEnviar.c  ui_TelaParaEnviar.h  ui_TelaParaImprimir.c  ui_TelaParaImprimir.h  ui_TelaParaRetirada.c  ui_TelaParaRetirada.h  ui_comp.h  ui_comp_botaoselecao.c  ui_comp_botaoselecao.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_returnhome.c  ui_comp_returnhome.h  ui_comp_switchtheme.c  ui_comp_switchtheme.h  ui_img_1275313820.c  ui_img_1275314971.c  ui_img_1973681197.c  (+20 more)
