SET(SOURCES ui_comp_botaoselecao.c
    ui_comp_returnhome.c
    ui_comp_switchtheme.c
    ui_comp.c
    ui_Screen1.c
    ui_ParaEnvia.c
    ui_TelaNotificacoes.c
    ui_ScreenSleepMode.c
    ui_Estoque.c
    ui_MercadoLivre.c
    ui_Compras.c
    ui_Lucro.c
    ui_Shopee.c
    ui_TelaParaEnviar.c
    ui_TelaParaRetirada.c
    ui_TelaParaImprimir.c
    ui_theme_manager.c
    ui_themes.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_setting_png.c
    ui_img_1275313820.c
    ui_img_package_png.c
    ui_img_click_png.c
    ui_img_201442241.c
    ui_img_handshake_png.c
    ui_img_cart_png.c
    ui_img_profit_png.c
    ui_img_delete_png.c
    ui_img_1973681197.c
    ui_img_8670999.c
    ui_img_wifi_4_png.c
    ui_img_462869052.c
    ui_img_return_png.c
    ui_img_1275314971.c
    ui_img_659251599.c
    ui_img_747636525.c
    ui_img_725899859.c
    ui_img_box_png.c
    ui_img_wdaswdasdaw_png.c
    ui_img_close_png.c)

add_library(ui ${SOURCES})
